/**
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

option java_package = "org.apache.hadoop.yarn.proto";
option java_outer_classname = "YarnServerNodemanagerRecoveryProtos";
option java_generic_services = true;
option java_generate_equals_and_hash = true;
package hadoop.yarn;

import "yarn_protos.proto";

message ContainerManagerApplicationProto {
  optional ApplicationIdProto id = 1;
  optional string user = 2;
  optional bytes credentials = 3;
  repeated ApplicationACLMapProto acls = 4;
  optional LogAggregationContextProto log_aggregation_context = 5;
  optional string userFolder = 6;
  optional bytes key_store = 7;
  optional string key_store_password = 8;
  optional bytes trust_store = 9;
  optional string trust_store_password = 10;
  optional int32 crypto_version = 11;
}

message DeletionServiceDeleteTaskProto {
  optional int32 id = 1;
  optional string user = 2;
  optional string subdir = 3;
  optional int64 deletionTime = 4;
  repeated string basedirs = 5;
  repeated int32 successorIds = 6;
}

message LocalizedResourceProto {
  optional LocalResourceProto resource = 1;
  optional string localPath = 2;
  optional int64 size = 3;
}

message LogDeleterProto {
  optional string user = 1;
  optional int64 deletionTime = 2;
  optional string userFolder = 3;
}
